<resources>
  <string name="app_name">SUPER3</string>
  <string name="about">About</string>
  <string name="about_title">About SUPER3</string>
  <string name="game_menu_save_state">Save state</string>
  <string name="game_menu_exit_game">Exit game</string>
  <string name="save_state_dialog_title">Save states</string>
  <string name="save_state_choose_slot">Choose a save slot:</string>
  <string name="save_state_slot_format">Slot %1$d</string>
  <string name="save_state_slot_saved_format">Saved %1$s</string>
  <string name="save_state_slot_empty">Empty</string>
  <string name="save_state_action_save">Save</string>
  <string name="save_state_action_load">Load</string>
  <string name="exit_game_title">Exit game?</string>
  <string name="exit_game_message">Are you sure you want to exit the game?</string>
  <string name="exit_game_confirm">Exit</string>
  <string name="exit_game_cancel">Cancel</string>
  <string name="setup_title">Welcome to SUPER3</string>
  <string name="setup_subtitle">Quick setup for your folders.</string>
  <string name="setup_games_title">Choose your games folder</string>
  <string name="setup_games_body">SUPER3 does not include games, ROMs, or BIOS files. Pick a folder that already contains your Model 3 ZIPs.</string>
  <string name="setup_pick_games">Pick games folder</string>
  <string name="setup_data_title">Choose your data folder</string>
  <string name="setup_data_body">Optional: pick where saves, configs, flyers, and screenshots live. You can skip to use internal storage.</string>
  <string name="setup_pick_data">Pick data folder</string>
  <string name="setup_next">Next</string>
  <string name="setup_back">Back</string>
  <string name="setup_finish">Finish</string>
  <string name="setup_not_set">Not set</string>
  <string name="setup_games_folder_value">Games folder: %1$s</string>
  <string name="setup_data_folder_value">Data folder: %1$s</string>
</resources>
